--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,41 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f9;
-    color: #333;
-  }
-  
-  button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  input {
-    margin: 5px 0;
-    padding: 8px;
-    font-size: 14px;
-    width: 100%;
-  }
-  
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f9;
+  color: #333;
+}
+
+button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button.halle-4 {
+  background-color: yellow;
+  color: black;
+}
+
+button.halle-7 {
+  background-color: red;
+  color: white;
+}
+
+button.fracht-west {
+  background-color: blue;
+  color: white;
+}
+
+button.embargo {
+  background-color: black;
+  color: white;
+}
+
+input {
+  margin: 5px 0;
+  padding: 8px;
+  font-size: 14px;
+  width: 100%;
+}
